--- a/_posts/2011-2-22-intro.md
+++ b/_posts/2011-2-22-intro.md
@@ -3,7 +3,7 @@ layout: post
 title: Content Free
 ---
 
-# Welcome to {{ page.title }}
+Welcome to {{ page.title }}
 =============================
 
 The thing i find wierd about working on github like this is the fact that 
