Flush changes, adds robo blog

--- a/_posts/2011-03-01-roboball.md
+++ b/_posts/2011-03-01-roboball.md
@@ -1,27 +1,46 @@
 ---
 layout: post
-title: Roboball
+title: RoboBall
 published: false
 ---
-# Roboball
-I have always been fascinated by writing robots which compete with each other, 
-so while i was studying python at university i began work on a game called
-"botball" where robots running in real time would compete in a football like
-game. I released it to my fellow class mates to a resounding lack of interest,
-but i guess most of them were struggling with the basics.
+# RoboBall
+Robot games are cool! Which is why when i studied python at university i wrote 
+a game called botball in which (virtual) robots written in python would vie for
+glory on a (virtual) football field and all in real time. After a weekend of
+exploring python i released the game to my fellow classmates to a resounding
+lack of interest. I believe many of the students were not prepared for writing
+threaded football playing robots, in fact, due to a mistake in which the course
+had no prerequisites, many of them were not prepared to write a hello world.
+Discouraged by the awkward silence in my forum thread i shelved the project 
+and moved on.
 
-##Rational
-Most of the robot games i have encountered have revolved around a virtual 
-masacre were scripts shoot, destroy and annihilate each other. Now don't get
-me wrong i play Call of Duty and love it but the idea that casual robot
-development is aimed at creating ever increasingly efficient and devious
-routines to kill each other is a little disturbing. This is artificial 
-intelligence after all and when the time comes to start booting android it may
-be that the most developed code is loaded with battle strategies. I don't think
-that would end well.
+
+##Rationale
+Destroying the world: many have tried, programmers will succeed. I've seen
+enough apocolypse movies to know that AI will destroy us all, and yet most
+of the robot games i have seen revolve around combat where programmers 
+create ever more clever and efficient methods for reaping destruction. Don't get
+me wrong, i'm not a pacifist, i play Call of Duty and love it, but somehow 
+training the next generation of killer robots seems like a bad idea.
+
+So what attributes would you like to see when you are facing a steel framed 
+monster android of the future? Co-operation? Team Work? In RoboBall the robot
+is actually a team of 8 robots working together to solve the complex problem of
+getting the ball past the other team and into the goal.
 
 ## The Game 
-The game is played on a field which is a rectangular grid with a goal at each 
-end. Each team has an intial side which they must defend while attempting to 
+The game is played on a field which is comprised of a rectangular grid with 
+a goal at each end. Each team has an initial side which they must defend while attempting to 
 move the ball to the other goal. Each bot may move or kick the ball in any of
 8 directions being horizontal, vertical or diagonal.
+
+## The Rules
+_These numbers are not final and are only intended for illustration_
+* The field is a grid of 16 by 65
+* 8 Robots on each team
+* The game consists of 10 rounds, with each team starting with the ball 5 times
+* A point is scored when a robot kicks or carries a ball into the opposite goal
+* A foul is scored when the ball is kicked or carried off the field at any other point
+* A round ends when a point or foul is scored
+* The winner is the player with the most points and, in case of a tie, the least fouls
+
