finishes roboball blog... finally

--- a/_posts/2011-03-01-roboball.md
+++ b/_posts/2011-03-01-roboball.md
@@ -1,38 +1,54 @@
 ---
 layout: post
 title: RoboBall
-published: false
+published: true
 ---
 # RoboBall
 Robot games are cool! Which is why when i studied python at university i wrote 
 a game called botball in which (virtual) robots written in python would vie for
-glory on a (virtual) football field and all in real time. After a weekend of
+glory on a (virtual) football field, all in real time. After a weekend of
 exploring python i released the game to my fellow classmates to a resounding
 lack of interest. I believe many of the students were not prepared for writing
-threaded football playing robots, in fact, due to a mistake in which the course
-had no prerequisites, many of them were not prepared to write a hello world.
-Discouraged by the awkward silence in my forum thread i shelved the project 
-and moved on.
+threaded football playing robots, in fact, due to a publishing error in which 
+the course had no prerequisites, many of them were not prepared to write a 
+hello world. Discouraged by the awkward silence however i shelved 
+the project and moved on.
 
+Robot games are still cool and i still love this idea, so i have
+decided to persue it in the hope that it sparks some interest after all. Perusing 
+my old source files i encountered the error message "OMG Batman" so i decided 
+to start from scratch and leverage some experience gained. My vision is to 
+create a small online community where programmers can upload bots to compete 
+in an ongoing competition with live results and web based playback visualisation
+(botball was ANSI). I have also come up with a _revolutionary_ new name 
+to kick off the project.
 
 ##Rationale
 Destroying the world: many have tried, programmers will succeed. I've seen
 enough apocolypse movies to know that AI will destroy us all, and yet most
-of the robot games i have seen revolve around combat where programmers 
-create ever more clever and efficient methods for reaping destruction. Don't get
+of the robot games i have seen revolve around combat where programmers create 
+ever more clever and efficient methods for reaping destruction. Don't get
 me wrong, i'm not a pacifist, i play Call of Duty and love it, but somehow 
-training the next generation of killer robots seems like a bad idea.
+training the next generation of killer robots seems like a bad idea. It may
+be that, through a process of digital evolution, when the time comes to start
+booting androids the most advanced code is aimed at warfare.
 
 So what attributes would you like to see when you are facing a steel framed 
 monster android of the future? Co-operation? Team Work? In RoboBall the robot
-is actually a team of 8 robots working together to solve the complex problem of
-getting the ball past the other team and into the goal.
-
+is a team of 8 robots working together to solve the complex problem of
+getting the ball past the other team and into the goal. The challenge is to 
+overcome the strategies employed by each opposing team coordinating each player
+to either defend or attack and score points. RoboBall is aimed at developing
+a problem base which will encourage the creation of routines which may be
+of practical benefit in the technological world of the future.
+    
 ## The Game 
 The game is played on a field which is comprised of a rectangular grid with 
-a goal at each end. Each team has an initial side which they must defend while attempting to 
-move the ball to the other goal. Each bot may move or kick the ball in any of
-8 directions being horizontal, vertical or diagonal.
+a goal at each end. Each team has an initial side which they must defend while 
+attempting to move the ball to the other goal. Each bot may move or kick the 
+ball in any of 8 directions being horizontal, vertical or diagonal. It is
+most similar to soccer although digital constraints make it much simpler, and
+therefore much easier to develop.
 
 ## The Rules
 _These numbers are not final and are only intended for illustration_
@@ -43,4 +59,10 @@ _These numbers are not final and are only intended for illustration_
 * A foul is scored when the ball is kicked or carried off the field at any other point
 * A round ends when a point or foul is scored
 * The winner is the player with the most points and, in case of a tie, the least fouls
+* When the fouls are tied a sudden death round occurs
+
+## Conclusion
+Look out for the source which will be published as a github repository in the 
+coming weeks. Expressions of interest, arguments and potential collaborators
+are definitely welcome, by [email](mailto:dylan@dje.me) or comment.
 
