--- a/_posts/2011-05-10-tabs.md
+++ b/_posts/2011-05-10-tabs.md
@@ -3,6 +3,7 @@ title: Tabs & Spaces
 layout: post
 publish: true
 ---
+# {{page.title}}
 The tabs versus spaces war has been raging for as long as anyone can remember,
 with programmers often being forced into a style which is unfamiliar and
 uncomfortable. For myself their was no debate in the beginning, C on unix was
