--- a/_posts/2011-05-10-tabs.md
+++ b/_posts/2011-05-10-tabs.md
@@ -1,7 +1,7 @@
 ---
 title: Tabs & Spaces
 layout: post
-publish: false
+publish: False
 ---
 # {{page.title}}
 The tabs versus spaces war has been raging for as long as anyone can remember,
